
plugins {
    id 'java'
}

sourceCompatibility = 15
targetCompatibility = 15

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

repositories {
    mavenLocal()
    jcenter()  // or alternatively: mavenCentral()
}

dependencies {
    //implementation 'au.com.bytecode:opencsv:2.4'
    implementation 'com.google.guava:guava:28.1-jre'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
}

